--- a/src/data/grammar/vocab/numbers.yaml
+++ b/src/data/grammar/vocab/numbers.yaml
@@ -91,6 +91,12 @@
         "#num4-9##num0-9#"
     ],
 
+    "num25s": [
+      "25",
+      "50",
+      "75"
+    ],
+
     "num2-99": [
         "#num2-9#",
         "#num1-9##num0-9#"
@@ -113,6 +119,9 @@
     ],
     "priceTix": [
         "#num1-9# event tickets", "#num1-12# event tickets", "#num1-9##num0-9# event tickets"
+    ],
+    "pricePlayPoints": [
+        "[_zeroFive:0,5]#num1-9##_zeroFive# play points", "[_oneTwo:,1,2]#_oneTwo##num25s# play points"
     ],
     "num0-9": ["0","1","2","3","4","5","6","7","8","9"],
     "num1-9": ["1","2","3","4","5","6","7","8","9"],
